src/objects/QPMS__Assessment_Template__c.object
<CustomObject>
    <description>This is assessment template object.</description>
    <fields>
        <fullName>QPMS__Allow_re_test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is to store the Allow re-test value</description>
        <label>Allow Re-Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup to course profile</description>
        <label>Course</label>
        <referenceTo>QPMS__Course__c</referenceTo>
        <relationshipLabel>Assessment Templates</relationshipLabel>
        <relationshipName>Assessment_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Final_Message_on_final_fail__c</fullName>
        <description>This field is used to store Final Message on final fail value</description>
        <label>Final Message on Fail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Inform_Manager_Continue_With_training__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Inform Manager &amp; Continue With training</description>
        <inlineHelpText>Inform Manager &amp; Continue With training</inlineHelpText>
        <label>Inform Manager &amp; Continue With training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Inform_Manager_Wait_for_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inform Manager &amp; Wait for approval</description>
        <inlineHelpText>Inform Manager &amp; Wait for approval</inlineHelpText>
        <label>Inform Manager &amp; Wait for approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Minimum_Passing_Score__c</fullName>
        <description>thi field is used to store Minimum Passing Score</description>
        <label>Minimum Passing %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__No_Of_Attempts__c</fullName>
        <description>this field is used to store no attempts data</description>
        <label>No Of Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__No_Of_Questions__c</fullName>
        <description>This field stores no of questions in  assessment</description>
        <label>No Of Questions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Test_Assessment__c</fullName>
        <label>Test Assessment</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Assessment Library Template</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Assesment Te Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>